--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<!-- Add CSS at the head of HTML file -->
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
-		<!-- Your code goes here-->
-
-	<!-- Add JS at the bottom of HTML file --> 
-        <script src="./js/main.js"></script>
-</body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/exp-parameterized-polymorphism-au/simulation/favicon.ico"><title>exp-10</title><script defer="defer" src="/exp-parameterized-polymorphism-au/simulation/js/chunk-vendors.f30ce4a2.js"></script><script defer="defer" src="/exp-parameterized-polymorphism-au/simulation/js/app.37d0fbbf.js"></script><link href="/exp-parameterized-polymorphism-au/simulation/css/app.fba695dd.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but exp-10 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
